tests/errors/empty_subscript.experr
expected an index expression inside
